tests/fixtures/invalid/list_2_args.py
# list() takes at most 1 argument, got 2
x = list(1, 1)
